--- a/server/.env
+++ b/server/.env
@@ -3,5 +3,12 @@ MONGO_DB_URI = mongodb+srv://root:7878@airbnb.mn8hv.mongodb.net/
 SECRET_KEY = 7679173924@Deba
 EMAIL_USER = debanjanpaul609@gmail.com
 EMAIL_PASS = mloz beur iefw jbax
-GOOGLE_CLIENT_ID = 348667791685-evbumfehklu8vbnv18jnd4nnsvmseidp.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET = 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
+# For Original Netlify Deployment
+GOOGLE_CLIENT_ID =835742849491-2rs87k8kb5l5g5mcop23o5r3pbivscqu.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET =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
+FRONTEND_URL = https://excel-analytics-v1.netlify.app
+
+# For Local Testing
+# GOOGLE_CLIENT_ID = 835742849491-rkrob8d5nav1k2q6nqs3fu2r8s4vrtrq.apps.googleusercontent.com
+# GOOGLE_CLIENT_SECRET = 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
+# FRONTEND_URL = http://localhost:5173
