--- a/server/.env
+++ b/server/.env
@@ -6,9 +6,9 @@ EMAIL_PASS = mloz beur iefw jbax
 # For Original Netlify Deployment
 GOOGLE_CLIENT_ID =835742849491-2rs87k8kb5l5g5mcop23o5r3pbivscqu.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET =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
-#FRONTEND_URL = https://excel-analytics-v1.netlify.app
+FRONTEND_URL = https://excel-analytics-v1.netlify.app
 
 # For Local Testing
 # GOOGLE_CLIENT_ID = 835742849491-rkrob8d5nav1k2q6nqs3fu2r8s4vrtrq.apps.googleusercontent.com
 # GOOGLE_CLIENT_SECRET = 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
-FRONTEND_URL = http://localhost:5173
+#FRONTEND_URL = http://localhost:5173
